nodejs/nextjs-typescript/k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: node-nextjs-typescript
spec:
  type: NodePort
  ports:
    - port: 3000
      targetPort: 3000
  selector:
    app: node-nextjs-typescript
